# ChangeLog for dev-haskell/ansi-terminal
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-haskell/ansi-terminal/ChangeLog,v 1.15 2012/03/17 19:18:36 slyfox Exp $

  17 Mar 2012; Sergei Trofimovich <slyfox@gentoo.org>
  ansi-terminal-0.5.5.ebuild:
  alpha/ia64/sparc stable (bug #399967).

  08 Mar 2012; Brent Baude <ranger@gentoo.org> ansi-terminal-0.5.5.ebuild:
  Marking ansi-terminal-0.5.5 ppc64 for bug 399967

  08 Mar 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  ansi-terminal-0.5.5.ebuild:
  x86 stable wrt bug #399967

  06 Mar 2012; Brent Baude <ranger@gentoo.org> ansi-terminal-0.5.5.ebuild:
  Marking ansi-terminal-0.5.5 ppc for bug 399967

  24 Feb 2012; Agostino Sarubbo <ago@gentoo.org> ansi-terminal-0.5.5.ebuild:
  Stable for amd64, wrt bug #399967

*ansi-terminal-0.5.5 (01 Aug 2011)

  01 Aug 2011; Sergei Trofimovich <slyfox@gentoo.org>
  +ansi-terminal-0.5.5.ebuild:
  Version bump.

  25 Feb 2011; Kacper Kowalik <xarthisius@gentoo.org>
  ansi-terminal-0.5.0.ebuild:
  ppc/ppc64 stable wrt #339580

  20 Nov 2010; Sergei Trofimovich <slyfox@gentoo.org>
  ansi-terminal-0.5.0.ebuild:
  alpha/ia64/sparc stable (bug #339580). Marked ~x86-fbsd (bug #227677).

  19 Oct 2010; Thomas Kahle <tomka@gentoo.org> ansi-terminal-0.5.0.ebuild:
  x86 stable per bug 339580

  16 Oct 2010; Markos Chandras <hwoarang@gentoo.org>
  ansi-terminal-0.5.0.ebuild:
  Stable on amd64 wrt bug #339580

  09 Sep 2010; Sergei Trofimovich <slyfox@gentoo.org>
  ansi-terminal-0.5.0.ebuild:
  Marked ~sparc

  20 Jul 2010; Joseph Jezak <josejx@gentoo.org> ansi-terminal-0.5.0.ebuild:
  Marked ~ppc.

  10 Jul 2010; Sergei Trofimovich <slyfox@gentoo.org> ChangeLog:
  marked ~ia64

  08 Jul 2010; Sergei Trofimovich <slyfox@gentoo.org>
  ansi-terminal-0.5.0.ebuild:
  ~alpha keyworded

*ansi-terminal-0.5.0 (14 Mar 2010)

  14 Mar 2010; Lennart Kolmodin <kolmodin@gentoo.org>
  +ansi-terminal-0.5.0.ebuild, +metadata.xml:
  Initial version.
