@@ -1,12 +1,12 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-haskell/ansi-terminal/ansi-terminal-0.5.5.ebuild,v 1.6 2012/03/17 19:18:36 slyfox Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-haskell/ansi-terminal/ansi-terminal-0.5.5.ebuild,v 1.7 2012/04/14 08:52:37 gienah Exp $
 
 # ebuild generated by hackport 0.2.13
 
-EAPI="3"
+EAPI=4
 
-CABAL_FEATURES="bin lib profile haddock hscolour"
+CABAL_FEATURES="bin lib profile haddock hoogle hscolour"
 inherit haskell-cabal
 
 DESCRIPTION="Simple ANSI terminal support, with Windows compatibility"
